# bazel-advanced-config

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  bazel-bazel-advanced-templating  bazel-bin  bazel-out  bazel-testlogs  defs.bzl  jinja_template_renderer.py  requirements.in  requirements_lock.txt
.bcr/: metadata.template.json
.github/workflows/: main.yaml
cbor_config/: BUILD.bazel  cbor_config.py  cbor_configurator.py  defs.bzl
cbor_config/examples/: BUILD.bazel  massive_json.json  massive_yaml.yaml  test_config_1.yaml  test_config_2.json  test_config_3.toml
cbor_config/tests/: BUILD.bazel  config_1.yaml  config_2.toml  config_3.json  config_4.yaml  tests.py
jinja_templater/: defs.bzl  jinja_template_renderer.py
jinja_templater/examples/: BUILD.bazel  cool_template.yaml
render_jinja_template/: BUILD.bazel  defs.bzl  render_jinja_template.py
render_jinja_template/examples/: BUILD.bazel
render_jinja_template/tests/: BUILD.bazel  macro.j2  template_1.yaml.j2  tests.py
render_jinja_templates/: BUILD.bazel  defs.bzl  render_jinja_templates.py
render_jinja_templates/examples/: BUILD.bazel  code_template_config.toml
render_jinja_templates/tests/: BUILD.bazel  template_1.yaml.j2  tests.py
render_templates/: BUILD.bazel  defs.bzl  jinja_template_renderer.py
render_templates/examples/: BUILD.bazel  code_template.py
