load("@rules_python//python:py_binary.bzl", "py_binary")
load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "jinja_template_renderer",
    srcs = ["jinja_template_renderer.py"],
    deps = [
        requirement("jinja2"),
        requirement("PyYAML"),
    ],
)

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)
