load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "jinja_template_renderer",
    srcs = ["jinja_template_renderer.py"],
    deps = [
        "@pypi//jinja2",
        "@pypi//pyyaml",
    ],
)

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)
