"""
This module provides helpers for ingesting multiple types of human-readable 'config'
files such as .yaml and .json and combining them into .cbor files. These .cbor files
can then be used as config for binaries or for expanding jinja templates using the
'render_templates' rule.
"""

module(
    name = "bazel_advanced_config",
    version = "0.2.0",
    compatibility_level = 0,
)

bazel_dep(name = "rules_python", version = "0.27.0")

PYTHON_VERSION = "3.11"

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    python_version = PYTHON_VERSION,
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pypi",
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "pypi")
