workspace(name = "bazel-advanced-templating")

### DEPS ###
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_python",
    sha256 = "9d04041ac92a0985e344235f5d946f71ac543f1b1565f2cdbc9a2aaee8adf55b",
    strip_prefix = "rules_python-0.26.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.26.0/rules_python-0.26.0.tar.gz",
)

### PYTHON RULES ###
load("@rules_python//python:repositories.bzl", "python_register_toolchains")

PYTHON_VERSION = "3.11"

python_register_toolchains(
    name = "python3",
    python_version = PYTHON_VERSION,
)

load("@python3//:defs.bzl", "interpreter")

### PIP THIRD PARTY ###
load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "third_party_python",
    python_interpreter_target = interpreter,
    requirements_lock = "//third_party/python:requirements_lock.txt",
)

# Load the starlark macro which will define your dependencies.
load("@third_party_python//:requirements.bzl", "install_deps")

# Call it to define repos for your requirements.
install_deps()
