load("//cbor_config:defs.bzl", "cbor_config")

cbor_config(
    name = "test_config_1",
    srcs = [
        "test_config_1.yaml",
        "test_config_2.json",
    ],
)

cbor_config(
    name = "test_config_2",
    srcs = [
        "test_config_1.yaml",
    ],
)

cbor_config(
    name = "test_config_3",
    srcs = [
        ":test_config_1",
        ":test_config_2",
    ],
    # TODO add overrides
    # overrides = [
    #     ":test_config_2"
    # ],
)
