load("//cbor_config:defs.bzl", "cbor_config")

package(default_visibility = ["//visibility:public"])

cbor_config(
    name = "test_config_1",
    srcs = [
        # Use a yaml.
        "test_config_1.yaml",
    ],
)

cbor_config(
    name = "test_config_3",
    srcs = [
        # Use a json.
        "test_config_2.json",
        # Use a toml. Also, override nested keys.
        "test_config_3.toml",
    ],
    overrides = [
        "test_config_1",
    ],
)
