load("//cbor_config:defs.bzl", "cbor_config")

package(default_visibility = ["//visibility:public"])

cbor_config(
    name = "test_config_1",
    srcs = [
        # Use a yaml.
        "test_config_1.yaml",
    ],
)

cbor_config(
    name = "test_config_3",
    srcs = [
        # Use a json.
        "test_config_2.json",
        # Use a toml. Also, override nested keys.
        "test_config_3.toml",
    ],
    overrides = [
        # Must override due to conflicting keys in .json.
        "test_config_1",
    ],
)

cbor_config(
    name = "massive_config",
    srcs = [
        # Big yaml, takes about 8 seconds to build.
        "massive_yaml.yaml",
    ],
)

cbor_config(
    name = "massive_config_with_deps",
    srcs = [
        # Let's combined two massive configs.
        ":massive_json.json",
        ":massive_config",
    ],
)
