load("@rules_python//python:defs.bzl", "py_test")
# Lets ensure we can pull from the top level file like an end user.
load("//:defs.bzl", "cbor_config")

cbor_config(
    name = "small_config",
    srcs = [
        "config_1.yaml",
        "config_2.toml",
        "config_3.json",
        {
            "string_4": "string",
            "integer_4": 1,
            "float_4": 1.1,
        },
        {
            "dict_1": {
                "string_5": "string",
                "integer_5": 1,
                "float_5": 1.1,
            },
        },
    ],
    overrides = [
        {
            "string_4": "string!",
            "dict_1->string_5": "string!",
        },
    ],
    visibility = ["//render_jinja_templates/tests:__pkg__"],
)

cbor_config(
    name = "downstream_config",
    srcs = [
        ":small_config",
    ],
)

cbor_config(
    name = "nested_config",
    srcs = [
        "config_4.yaml",
    ],
)

py_test(
    name = "tests",
    srcs = ["tests.py"],
    data = [
        ":downstream_config",
        ":nested_config",
        ":small_config",
    ],
    deps = [
        "//cbor_config",
        "@pypi//cbor2",
    ],
)
