load("@rules_python//python:defs.bzl", "py_test")

# Ensure we can pull from top level like end user.
load("//:defs.bzl", "cbor_config", "render_jinja_template")

render_jinja_template(
    name = "render_yaml_template",
    template = "template_1.yaml.j2",
    deps = [
        "macro.j2",
        "template_2.yaml.j2",
        "//cbor_config/tests:small_config",
    ],
)

# Just turn the rendered template(s) into cbor to make it easier to test.
cbor_config(
    name = "render_yaml_template_config",
    srcs = [":render_yaml_template"],
)

py_test(
    name = "tests",
    srcs = ["tests.py"],
    data = [
        ":render_yaml_template_config",
    ],
    deps = [
        "//render_jinja_template",
        "@pypi//cbor2",
    ],
)
